--- a/css/pages/_page.scss
+++ b/css/pages/_page.scss
@@ -42,6 +42,7 @@ p.caption{
 	padding: 10px;
 	text-align: right;
 	transition: 0.5s ease-in-out;
+	margin: 0;
 	@media (max-width: $small) {
 		text-align: center;
 	}
